  - Remove web PDF from Indic + ar-SA,fa-IR,he-IL. BZ #655713
  - Fix publish breaking UTF8 file names. BZ #648126
  - Fix non-en lang breaking website strings. BZ #656139
  - Fix IE8 javascript and layout issues. BZ #656531
  - Remove Red elements from interactive.css. BZ #650950
  - Added support for home page site_overrides.css file.  BZ #650950
  - Add check for outdated SRPMS.

2.3  Tue Oct 26 2010 
  - Prepend product name to product/version splash pages.
  - Fix bash completion for --brand and --type.
  - Use --nocolours in spec files.
  - Update tocs when home/product/version pages are updated. BZ #612027
  - Scroll to current entry in navigation menu.
  - Highlight current book in navigation menu.
  - Fix single quote in abstract/subtitle breaking RPM install. BZ #642088
  - Fix RPM website not installing cleanly.
  - Fix splash page icon wrap. BZ #642109
  - Moved titles before: example, equation, table. BZ #638787
  - Change html and PDF style for verbatim & example. BZ #638787
  - Change html and PDF style for admonitions. BZ #638787
  - Fix HTML footer style and layout.
  - Add bump action Tech Preview.
  - Fix indexterm merge missing nested nodes. BZ #643275
  - Add phrase to translatable tag list. BZ #643287
  - Fix POT files breaking when using HTML::Tree 4.0.
  - Fix translated label missing from manually installed book. BZ #643781
  - Add icon.svg to Create Book. BZ #644105
  - Add XML dump options for site config.
  - Fix histroy typo
  - Stop max_image_width overriding XML width settings.
  - Decrease white space at top and bottom of PDF.
  - Fix toc links to refentry in chunked HTML. BZ #645602

2.2  Wed Oct 06 2010 
  - Extend callout graphics to 40; adjust colour and font BZ #629804
  - Make keycombo example consistent with RHEL6 behaviour. BZ #618735
  - Restrict CSS style for edition to title pages to avoid applying to bibliographies
  - Fix images/icon.svg breaking rpm build. BZ #612515
  - Fix empty term breaking PDF build. BZ #614728