@@ -63,6 +63,7 @@
   - Remove Red elements from interactive.css. BZ #650950
   - Added support for home page site_overrides.css file.  BZ #650950
   - Add check for outdated SRPMS.
+  - Enable override RPM site config. BZ #695545
 
 2.3  Tue Oct 26 2010 
   - Prepend product name to product/version splash pages.
